Solucionado la puta mierda del append en loganalyzer linea 78. Poner comentarios en ReportGenerator y en LogAnalyzer, tambien en el front.